# rag-axis

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup-dev.sh
.github/workflows/: ci.yml  workflow.yml
docs/: ARCHITECTURE.md  docs.json
docs/adr/: 0001-dataclass-over-basemodel.mdx  0002-protocol-over-abc.mdx  0003-rrf-hybrid-fusion.mdx  0004-otel-native.md  0005-aiprims-rag-errors.mdx
docs/architecture/: design-principles.mdx  invariants.mdx  non-goals.mdx  package-map.mdx
docs/concepts/: cost-accountability.mdx  failure-modes.mdx  pydantic-boundaries.md  rag-system-layers.md
docs/contributing/: invariants.md  release.mdx  setup.mdx
docs/introduction/: quickstart.mdx  what-is-rag-axis.mdx  why-not-langchain.mdx
rag_axis/: py.typed
rag_axis/core/: __init__.py  errors.py
tests/: test_placeholder.py
