[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbase"
version = "0.0.0"
description = "Opinionated, production-minded core library for RAG systems"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Sai Harsha Kondaveeti" }
]
requires-python = ">=3.9"

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/saiharsha-k/ragbase"
