[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-axis"
version = "0.0.1"
description = "Production contract layer for RAG systems — typed, explicit, observable, composable."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Sai Harsha Kondaveeti", email = "harsha@datavalley.ai" }
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/saiharsha-k/rag-axis"
Documentation = "https://docs.saiharshakondaveeti.com"
Changelog = "https://github.com/saiharsha-k/rag-axis/blob/main/CHANGELOG.md"